# manifold

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  manifold-openai.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: default.yaml  minimal.yaml
docs/: ARCHITECTURE.md  SPEC.md
src/manifold/: __init__.py  chain.py  cli.py  config.py  gateway.py  health.py  logs.py  mcp_server.py  models.py  paths.py  process.py  stats.py  watcher.py
tests/: test_chain.py  test_cli_commands.py  test_config.py  test_gateway.py  test_health.py  test_integration_startup_health.py  test_logs.py  test_models.py  test_paths.py  test_process_shutdown.py  test_stats.py  test_watcher.py
