[project]
name = "manifold"
version = "0.1.0"
description = "Proxy mesh gateway — chain multiple LLM proxy services into a single transparent pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
    "uvicorn>=0.30",
    "starlette>=0.38",
    "mcp>=1.0",
]

[project.scripts]
manifold = "manifold.cli:app"
manifold-mcp = "manifold.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manifold"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]
